--- a/Resources/colmar.css
+++ b/Resources/colmar.css
@@ -4,33 +4,46 @@
     text-decoration: none;
     list-style-type: none;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
-.mobile{
-    display: none;
+body {
+    --header-height: 64px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    padding: 0 24px;
+    height: 100%;
+}
+
+.logo {
+    margin-left: 0;
 }
 header{
-    display:flex;
-    align-items: center;
-    height: 64px;
+    height: var(--header-height);
     position: fixed;
-    width: 100%;    
+    width: 100%;
     top: 0;
     left: 0;
-    z-index: 100;
     background: white;
 }
-.desktop{
+
+main {
+    margin-top: var(--header-height);
+}
+/* .desktop{
     display: flex;
     align-items: center;
     width: 100%;
     height: 100%;
     padding: 0 24px 0 24px;
-}
-.desktop .logo{
+} */
+/* .desktop .logo{
     display: flex;
     line-height: 32px;
     align-items: center;
-}
+} */
 a{
     color: #505050;
 }
@@ -44,42 +57,256 @@ a{
     font-weight: lighter;
     font-size: 20px;
 }
-.desktop nav{
+/* .desktop nav{
     flex: 1;
     text-align: right;
-}
-.desktop li{
+} */
+/* .desktop li{
     display: inline-block;
     padding-right: 16px;
-}
+} */
 .cover{
-    display: flex;
     background: #B8B8B8;
-}
-.cover .left{
-    width: 60%;
-    padding: 32px 24px 32px 24px;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .left img{
     width: 100%;
 }
-.right{
+
+.content .button{
+    margin-top: 24px;
+    background: #505050;
+    color: white;
+    text-align: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.details{
+    padding: 16px 0px 32px;
+}
+
+.orientation img.mobile{
+    width: 100%;
+}
+
+.noshade{
+margin-bottom: 32px;
+}
+
+.description{
+padding-left: 16px;
+}
+
+.courses{
+    padding: 32px 16px;
     display: flex;
     flex-direction: column;
+}
+
+.courses h1{
+    padding-bottom: 16px;
+    text-align: center;
+}
+
+.course-description{
+    padding: 16px 16px 24px 16px;
+    background: lightgrey;
+}
+
+.thesis{
+    padding-top: 32px;
+    width: 100%;
+}
+
+.thesis h1{
+    text-align: center;
+}
+
+.thesis video{
+    width: 100%;
+}
+footer{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    padding: 16px 0px 16px 24px;
 }
-button{
-padding-top: 8px;
-padding-bottom: 8px;
-background: #505050;
-color: white;
-width: 200px;
+
+.links{
+vertical-align: middle;
 }
-   
-
-
-
-
-
     
+
+/* Desktop styles */
+@media screen and (min-width: 900px) {
+    .mobile {
+        display: none;
+    }
+
+    .logo {
+        margin-right: auto;
+    }
+
+    nav a {
+        margin-left: 1em; 
+    } 
+
+    .cover{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    .left{
+        width: 60%;   
+        padding: 32px 24px 32px 24px;
+    }
+
+    .left img{
+        width: 100%;
+    }
+
+    .logo > * {
+        vertical-align: middle;
+    }
+
+    .right{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start; 
+        justify-content: center;
+    }
+    .content{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 80%;
+    }
+
+    .content .button{
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background: #505050;
+    color: white;
+    text-align: center;
+    width: 100%;
+    }
+    
+    .section{
+    display: flex;
+    }
+
+    .left p{
+        padding-top: 24px;  
+    }
+
+    .extra-padding{
+        padding-bottom: 32px;
+    }
+
+    .details{
+        width: 40%; 
+    }
+
+    .orientation{
+        display: flex;
+        margin: 16px;
+    }
+    
+    .orientation img{
+        width: 35%;
+        height: auto;
+    }
+    
+
+    /* the image squeezes when the width of the page is changed */
+    /* how to expand the image for mobile such that there's only 16px padding */
+
+    .orientation .description{
+        width: 65%;
+    }
+
+    .description{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .description h2,p,a{
+        padding: 10px;
+    }
+
+    .description a{
+        color: lightseagreen;
+    }
+
+    .shaded{
+        background: lightgrey;
+    }
+
+    /* add 32px to the byline */
+ 
+    /* courses section */
+    .courses{
+        background: lightgrey;  
+        padding: 32px 72px;
+    }
+
+    .topics{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .course-description{
+        background: white;
+        flex: 1;
+    }
+
+    .boxes{
+        margin: 16px;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+    }
+    /* how to make boxes of the same size?? And how to fix the white space b/w image and text*/ 
+    /* do we use 33.33% or something else?? If i don't use the images go beyond the page width */
+    /* Margin and padding for content isn't per the spec sheet */
+
+    .boxes img{ 
+        width: 100%;
+        height: auto;
+    }
+
+    .courses h1{
+        padding-bottom: 32px;
+        text-align: center;
+    }
+
+/* thesis section  */
+   /* used the same left class as in the previous section */
+
+
+}
+/* Mobile styles */
+@media screen and (max-width: 899px) {
+    .desktop {
+        display: none;
+    }
+    nav {
+        justify-content: space-between;
+    }
+
+    .content{
+        padding: 32px 16px;
+    }
+
+    .boxes{
+        margin-bottom: 8px;
+    }
+
+
+}
+
